feat: add NotFoundPage record to header locales

--- a/src/locales/en/header.json
+++ b/src/locales/en/header.json
@@ -12,6 +12,7 @@
   "UserTemplates": "User's templates",
   "UserForms": "User's forms",
   "AdminPage": "Admin's Page",
+  "NotFoundPage": "Page Not Found",
 
   "SearchPlaceholder": "Search...",
 
