--- a/src/locales/ru/header.json
+++ b/src/locales/ru/header.json
@@ -12,6 +12,7 @@
   "UserTemplates": "Шаблоны пользователя",
   "UserForms": "Формы пользователя",
   "AdminPage": "Страница администратора",
+  "NotFoundPage": "Страница не найдена",
 
   "SearchPlaceholder": "Поиск...",
 
