feat: add additional record to auth.json

--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -2,5 +2,6 @@
   "SignInWelcomeMsg": "Welcome, please sign in to continue",
   "Username": "Username",
   "Password": "Password",
+  "Email": "Email",
   "RememberMe": "Remember me"
 }
