--- a/src/locales/ru/auth.json
+++ b/src/locales/ru/auth.json
@@ -2,5 +2,6 @@
   "SignInWelcomeMsg": "Добро пожаловать, пожалуйста войдите чтобы продолжить",
   "Username": "Имя пользователя",
   "Password": "Пароль",
+  "Email": "Электронная почта",
   "RememberMe": "Запомнить меня"
 }
