feat: add sign in fields error locales

--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -3,5 +3,8 @@
   "Username": "Username",
   "Password": "Password",
   "Email": "Email",
-  "RememberMe": "Remember me"
+  "RememberMe": "Remember me",
+
+  "PasswordError": "Password must contain one or more symbols",
+  "EmailError": "Enter valid email"
 }
