--- a/src/locales/ru/auth.json
+++ b/src/locales/ru/auth.json
@@ -3,5 +3,8 @@
   "Username": "Имя пользователя",
   "Password": "Пароль",
   "Email": "Электронная почта",
-  "RememberMe": "Запомнить меня"
+  "RememberMe": "Запомнить меня",
+
+  "PasswordError": "Пароль должен состоять хотя бы из одного символа",
+  "EmailError": "Введите валидный адрес электронной почты"
 }
