feat: add additional records related to SignUp page to auth locale

--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -1,10 +1,16 @@
 {
   "SignInWelcomeMsg": "Welcome, please sign in to continue",
+  "SignUpWelcomeMsg": "Welcome, please sign up to continue",
+
   "Username": "Username",
   "Password": "Password",
+  "RepeatPassword": "Repeat password",
   "Email": "Email",
   "RememberMe": "Remember me",
 
   "PasswordError": "Password must contain one or more symbols",
-  "EmailError": "Enter valid email"
+  "EmailError": "Enter valid email",
+
+  "SignUpPasswordError": "Password must contain one or more symbols and match 'repeat password' field",
+  "UserNameError": "User name must contain one or more symbols"
 }
