--- a/src/locales/ru/auth.json
+++ b/src/locales/ru/auth.json
@@ -1,10 +1,16 @@
 {
   "SignInWelcomeMsg": "Добро пожаловать, пожалуйста войдите чтобы продолжить",
+  "SignUpWelcomeMsg": "Добро пожаловать, пожалуйста зарегистрируйтесь чтобы продолжить",
+
   "Username": "Имя пользователя",
   "Password": "Пароль",
+  "RepeatPassword": "Повторите пароль",
   "Email": "Электронная почта",
   "RememberMe": "Запомнить меня",
 
   "PasswordError": "Пароль должен состоять хотя бы из одного символа",
-  "EmailError": "Введите валидный адрес электронной почты"
+  "EmailError": "Введите валидный адрес электронной почты",
+
+  "SignUpPasswordError": "Пароль должен состоять хотя бы из одного символа и должен совпадать с значением поля 'повторить пароль'",
+  "UserNameError": "Имя пользователя должно состоять хотя бы из одного символа"
 }
