--- a/src/locales/en/header.json
+++ b/src/locales/en/header.json
@@ -21,5 +21,8 @@
   "SearchPlaceholder": "Search...",
 
   "LanguageEn": "English",
-  "LanguageRu": "Russian"
+  "LanguageRu": "Russian",
+
+  "GoToSignIn": "Go to sign in page",
+  "GoToSignUp": "Go to sign up page"
 }
