feat: add record to auth.json related to unauthorized error

--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -12,5 +12,9 @@
   "EmailError": "Enter valid email",
 
   "SignUpPasswordError": "Password must contain one or more symbols and match 'repeat password' field",
-  "UserNameError": "User name must contain one or more symbols"
+  "UserNameError": "User name must contain one or more symbols",
+
+  "UnauthorizedErrorTitle": "Oops... Current user was blocked, delete, deprived of admins rights or his auth token is invalid",
+  "UnauthorizedErrorDescription": "The following error message was received:",
+  "UnauthorizedErrorBtn": "Close and sign in again"
 }
