--- a/src/locales/ru/auth.json
+++ b/src/locales/ru/auth.json
@@ -12,5 +12,9 @@
   "EmailError": "Введите валидный адрес электронной почты",
 
   "SignUpPasswordError": "Пароль должен состоять хотя бы из одного символа и должен совпадать с значением поля 'повторить пароль'",
-  "UserNameError": "Имя пользователя должно состоять хотя бы из одного символа"
+  "UserNameError": "Имя пользователя должно состоять хотя бы из одного символа",
+
+  "UnauthorizedErrorTitle": "Упс... Текущий пользователь был заблокирован, удален, лишен прав администратора или его токен авторизации невалиден",
+  "UnauthorizedErrorDescription": "Следующее сообщение об ошибке было получено:",
+  "UnauthorizedErrorBtn": "Закрыть и войти снова"
 }
